--- a/src/components/FormattedDate.astro
+++ b/src/components/FormattedDate.astro
@@ -4,22 +4,8 @@ export interface Props {
 }
 
 const { date } = Astro.props
-const d = date
-var date_format_str =
-	d.getFullYear().toString() +
-	'-' +
-	((d.getMonth() + 1).toString().length == 2
-		? (d.getMonth() + 1).toString()
-		: '0' + (d.getMonth() + 1).toString()) +
-	'-' +
-	(d.getDate().toString().length == 2 ? d.getDate().toString() : '0' + d.getDate().toString()) +
-	' ' +
-	(d.getHours().toString().length == 2 ? d.getHours().toString() : '0' + d.getHours().toString()) +
-	':' +
-	((parseInt(d.getMinutes() / 5) * 5).toString().length == 2
-		? (parseInt(d.getMinutes() / 5) * 5).toString()
-		: '0' + (parseInt(d.getMinutes() / 5) * 5).toString()) +
-	':00'
+const [fdate, ftime] = date.toISOString().substring(0, 19).split('T')
+const date_format_str = `${fdate} ${ftime}`
 ---
 
 <time class='dt-published text-sm font-bold text-opacity-60' datetime={date_format_str}>
