--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -60,6 +60,10 @@ div { margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:bas
     position: relative;
 }
 
+html {
+ font-family:  "Goudy Bookletter 1911", Georgia, Times, serif!important;
+}
+
 	.main-content-shadow {
 		display: block;
 		width: 100%;
