--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -6,8 +6,10 @@
 				<h1 class='title'>
 					<!-- G<span class="small-mobile-hide">REG</span> -->
 					JavaScript
-					<span aria-hidden='true' class='icon-anchor-one small-mobile-hide' id='logoanchor'
-					></span><span class='small-mobile-only'>N</span>
+					<span
+						aria-hidden='true'
+						class='icon-anchor-one small-mobile-hide gregasaurus'
+						id='logoanchor'></span><span class='small-mobile-only'>N</span>
 					Whisperer
 					<!-- B<span class="small-mobile-hide">ENNER</span> -->
 				</h1>
@@ -63,7 +65,7 @@
 </div>
 <span class='main-content-shadow'></span>
 
-<style media='none' onload="if(media!='all')media='all'" loading='lazy'>
+<style media='none' onload="if(media!='all') media='all'" loading='lazy'>
 	span {
 		margin: 0;
 		padding: 0;
@@ -676,6 +678,10 @@
 		font-weight: 400;
 		font-style: normal;
 		font-display: swap;
+	}
+
+	.gregasaurus {
+		font-family: gregasaurus;
 	}
 	@font-face {
 		font-family: MuncieRegular;
