--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -681,7 +681,7 @@
 	}
 
 	.gregasaurus {
-		font-family: gregasaurus;
+		font-family: gregasaurus !important;
 	}
 	@font-face {
 		font-family: MuncieRegular;
