--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -101,7 +101,7 @@ const articleDate = pubDate.toISOString()
 						<Picture
 							formats={['avif', 'webp']}
 							class='u-photo'
-							src='https://jswhisperer.uk/greg.jpeg'
+							src={import('../assets/images/greg.jpeg')}
 							alt='Gregory Benner'
 							style='display:none;'
 						/>
