--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,7 +17,7 @@ const posts = await getPosts(MAX_POSTS)
 	<Picture
 		formats={['avif', 'webp']}
 		class='u-photo'
-		src='https://jswhisperer.uk/greg.jpeg'
+		src={import('../assets/images/greg.jpeg')}
 		alt='Gregory Benner'
 	/>
 	<a class='p-org h-card' href='https:/jswhisperer.uk/'>jswhisperer</a>
