--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -6,10 +6,8 @@
 				<h1 class='title'>
 					<!-- G<span class="small-mobile-hide">REG</span> -->
 					JavaScript
-					<span
-						aria-hidden='true'
-						class='icon-anchor-one small-mobile-hide gregasaurus'
-						id='logoanchor'></span><span class='small-mobile-only'>N</span>
+					<span aria-hidden='true' class='icon-anchor-one small-mobile-hide' id='logoanchor'
+					></span><span class='small-mobile-only gregasaurus'>N</span>
 					Whisperer
 					<!-- B<span class="small-mobile-hide">ENNER</span> -->
 				</h1>
