--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -7,7 +7,7 @@
 					<!-- G<span class="small-mobile-hide">REG</span> -->
 					JavaScript
 					<span aria-hidden='true' class='icon-anchor-one small-mobile-hide' id='logoanchor'
-					></span><span class='small-mobile-only gregasaurus'>N</span>
+					></span><span class='small-mobile-only gregasaurus'>6</span>
 					Whisperer
 					<!-- B<span class="small-mobile-hide">ENNER</span> -->
 				</h1>
