--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,7 +20,7 @@ const structuredData = {
 
 <html lang='en' class='scroll-smooth'>
 	<head>
-		<!-- <script type='application/ld+json' set:html={JSON.stringify(structuredData)} /> -->
+		<meta name='viewport' content='width=device-width, initial-scale=1' />
 
 		<BaseHead title={title} description={description} ogImage={image} articleDate={articleDate} />
 		<ProviderTheme />
