--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -4,7 +4,7 @@ import { ViewTransitions } from 'astro:transitions'
 
 const { title, description = siteConfig.description, ogImage, articleDate } = Astro.props
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const socialImageURL = new URL(ogImage ? ogImage : '/open-graph.png', Astro.url).href
+// const socialImageURL = new URL(ogImage ? ogImage : '/open-graph.png', Astro.url).href
 
 export interface Props {
 	title: string
@@ -28,13 +28,7 @@ const siteURL = new URL(Astro.site)
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1' />
 
-<link
-	media='none'
-	onload="if(media!='all') media='all'"
-	loading='lazy'
-	href={siteURL + 'styles/global.css'}
-	rel='stylesheet'
-/>
+<link href='https://jswhisperer.ukstyles/global.css' rel='stylesheet' />
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
@@ -52,7 +46,7 @@ const siteURL = new URL(Astro.site)
 }
 
 <!-- Canonical URL -->
-<link rel='canonical' href={canonicalURL} />
+<link rel='canonical' href={canonicalURL || ''} />
 
 <!-- Primary Meta Tags -->
 <title>{siteTitle}</title>
@@ -70,7 +64,15 @@ const siteURL = new URL(Astro.site)
 <meta property='og:url' content={Astro.url} />
 <meta property='og:title' content={title} />
 <meta property='og:description' content={description} />
-<meta property='og:image' content={socialImageURL} />
+{
+	socialImageURL && (
+		<>
+			<meta property='og:image' content={socialImageURL} />
+			<meta property='twitter:image' content={socialImageURL} />
+		</>
+	)
+}
+
 {
 	articleDate && (
 		<>
@@ -83,9 +85,8 @@ const siteURL = new URL(Astro.site)
 <!-- Twitter -->
 <meta property='twitter:card' content='summary_large_image' />
 <meta property='twitter:url' content={Astro.url} />
-<meta property='twitter:title' content={title} />
+<meta property='twitter:title' content={siteConfig.title} />
 <meta property='twitter:description' content={description} />
-<meta property='twitter:image' content={socialImageURL} />
 
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
