--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -2,8 +2,8 @@
 import { siteConfig } from '@/site-config'
 import { ViewTransitions } from 'astro:transitions'
 
-const { title, description = siteConfig.description, ogImage, articleDate } = Astro.props
-const canonicalURL = new URL(Astro.url.pathname, Astro.site)
+const { title, description = siteConfig?.description, ogImage, articleDate } = Astro.props
+const canonicalURL = new URL(Astro.url?.pathname, Astro.site)
 // const socialImageURL = new URL(ogImage ? ogImage : '/open-graph.png', Astro.url).href
 
 export interface Props {
