--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,6 @@
 ---
 import ListCategories from '@/components/ListCategories'
 import ListPosts from '@/components/ListPosts'
-import TitlePage from '@/components/TitlePage'
 import BaseLayout from '@/layouts/BaseLayout'
 import { getPosts } from '@/utils'
 import { siteConfig } from '@/site-config'
@@ -23,8 +22,7 @@ const posts = await getPosts(MAX_POSTS)
 	<a class='p-org h-card' href='https:/jswhisperer.uk/'>jswhisperer</a>
 </div>
 
-<BaseLayout title='Home' description={siteConfig.description}>
-	<TitlePage title={siteConfig.title} />
+<BaseLayout title='Home'>
 	<ListCategories />
 
 	<div class='h-feed'>
@@ -32,21 +30,3 @@ const posts = await getPosts(MAX_POSTS)
 		<ListPosts FirstBig={true} posts={posts} />
 	</div>
 </BaseLayout>
-
-<script>
-	import { animate } from 'motion'
-	const showAnimations = localStorage.getItem('animations') === 'true'
-
-	if (showAnimations) {
-		animate(
-			'.title',
-			{ y: [80, 0], opacity: [0, 1] },
-			{
-				duration: 2.5,
-				opacity: { duration: 3 },
-
-				offset: [0, 0.55, 0.75]
-			}
-		)
-	}
-</script>
