--- a/src/pages/philosophy.astro
+++ b/src/pages/philosophy.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "@/layouts/BaseLayout";
+import BaseLayout from '@/layouts/BaseLayout'
 ---
 
 <BaseLayout title='Philosophy'>
