--- a/public/styles/global copy.css
+++ b/public/styles/global copy.css
@@ -72,32 +72,32 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "MuncieRegular";
-  color: #847e70;
+	font-family: 'MuncieRegular';
+	color: #847e70;
 }
 
 h2 {
-  font-size: 45px;
-  margin-bottom: 25px;
-  margin-top: 20px;
+	font-size: 45px;
+	margin-bottom: 25px;
+	margin-top: 20px;
 }
 body {
-  font-family: "Goudy Bookletter 1911", Georgia, Times, serif;
-  font-size: 19px;
-  line-height: 31px;
+	font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
+	font-size: 19px;
+	line-height: 31px;
 }
 
 p {
-  color: #444;
-  -webkit-font-smoothing: antialiased;
+	color: #444;
+	-webkit-font-smoothing: antialiased;
 
-  position: relative;
-  padding: 0;
-  border: 0;
-  font: inherit;
-  vertical-align: baseline;
-  text-shadow: 1px 1px 5px #fff;
-  margin: 0 0 20px 0;
-  letter-spacing: 1px;
-  text-align: justify;
+	position: relative;
+	padding: 0;
+	border: 0;
+	font: inherit;
+	vertical-align: baseline;
+	text-shadow: 1px 1px 5px #fff;
+	margin: 0 0 20px 0;
+	letter-spacing: 1px;
+	text-align: justify;
 }
