--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -23,8 +23,8 @@
 
 	html.dark .shiki,
 	html.dark .shiki span {
-	  color: var(--shiki-dark) !important;
-	  background-color: theme(colors.gray.900) !important;
+		color: var(--shiki-dark) !important;
+		background-color: theme(colors.gray.900) !important;
 	}
 }
 
@@ -40,41 +40,62 @@
 }
 
 .card {
-
-div { margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-shadow:1px 1px 5px #FFF;}
-*{position:relative;}
-.container .insidecolumn{border:solid 1px #CCC;-webkit-border-radius:10px 2px 10px 2px;-moz-border-radius:10px 2px 10px 2px;border-radius:10px 2px 10px 2px;background:rgb(255,255,255);background:rgba(255,255,255,.2);padding:10px 15px;-webkit-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);-moz-box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);box-shadow:inset 0 1px 2px 0 rgba(0,0,0,.1);}
-@media only screen and (max-width: 479px){
-.container .insidecolumn{padding-top:10px;}
-}
-
+	div {
+		margin: 0;
+		padding: 0;
+		border: 0;
+		font-size: 100%;
+		font: inherit;
+		vertical-align: baseline;
+		text-shadow: 1px 1px 5px #fff;
+	}
+	* {
+		position: relative;
+	}
+	.container .insidecolumn {
+		border: solid 1px #ccc;
+		-webkit-border-radius: 10px 2px 10px 2px;
+		-moz-border-radius: 10px 2px 10px 2px;
+		border-radius: 10px 2px 10px 2px;
+		background: rgb(255, 255, 255);
+		background: rgba(255, 255, 255, 0.2);
+		padding: 10px 15px;
+		-webkit-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+		-moz-box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+		box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+	}
+	@media only screen and (max-width: 479px) {
+		.container .insidecolumn {
+			padding-top: 10px;
+		}
+	}
 }
 .card {
-    border: solid 1px #CCC;
-    border-radius: 10px;
-    background: rgb(255, 255, 255);
-    background: rgba(255, 255, 255, .2);
-    padding: 10px 15px;
-    box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, .1);
-    overflow: hidden;
-    position: relative;
+	border: solid 1px #ccc;
+	border-radius: 10px;
+	background: rgb(255, 255, 255);
+	background: rgba(255, 255, 255, 0.2);
+	padding: 10px 15px;
+	box-shadow: inset 0 1px 2px 0 rgba(0, 0, 0, 0.1);
+	overflow: hidden;
+	position: relative;
 }
 
 html {
- font-family:  "Goudy Bookletter 1911", Georgia, Times, serif!important;
+	font-family: 'Goudy Bookletter 1911', Georgia, Times, serif !important;
 }
 
-	.main-content-shadow {
-		display: block;
-		width: 100%;
-		height: 50px;
-		border-top: 1px solid #f8f7f5;
-		background: linear-gradient(180deg, rgba(165, 157, 139, 0.3) 0%, rgba(165, 157, 139, 0) 100%);
-    position: absolute;
-    top: 0;
-    left: 0;
-	}
-.card code {
-    text-shadow: none;
+.main-content-shadow {
+	display: block;
+	width: 100%;
+	height: 50px;
+	border-top: 1px solid #f8f7f5;
+	background: linear-gradient(180deg, rgba(165, 157, 139, 0.3) 0%, rgba(165, 157, 139, 0) 100%);
+	position: absolute;
+	top: 0;
+	left: 0;
 }
-@import "./prism.css"
+.card code {
+	text-shadow: none;
+}
+@import './prism.css';
