--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,12 +2,12 @@
 import ListCategories from '@/components/ListCategories'
 import ListPosts from '@/components/ListPosts'
 import BaseLayout from '@/layouts/BaseLayout'
-import { getPosts } from '@/utils'
 import { siteConfig } from '@/site-config'
 import { Picture } from 'astro:assets'
+import { getCollection } from 'astro:content'
 
 const MAX_POSTS = 1005 // max number of posts to show on the home page
-const posts = await getPosts(MAX_POSTS)
+const posts = await getCollection('blog', { limit: MAX_POSTS })
 ---
 
 <div class='p-author h-card' style='display: none;'>
