--- a/src/components/NewHeader.astro
+++ b/src/components/NewHeader.astro
@@ -41,7 +41,7 @@
 								>
 							</li>
 							<li>
-								<a href='/' title='Blog'
+								<a href='/blog' title='Blog'
 									><span aria-hidden='true' class='icon-pipe'></span>
 									Blog</a
 								>
