--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,8 +10,7 @@ const MAX_POSTS = 1005 // max number of posts to show on the home page
 const posts = await getCollection('blog', { limit: MAX_POSTS })
 ---
 
-<BaseLayout title='Home'>
-	<ListCategories />
+<BaseLayout title='Blog'>
 	<div class='p-author h-card' style='display: none;'>
 		<a rel='author' class='p-name u-url' href=`https://jswhisperer.uk/author/greg`>Gregory Benner</a
 		>
@@ -24,6 +23,7 @@ const posts = await getCollection('blog', { limit: MAX_POSTS })
 		/>
 		<a class='p-org h-card' href='https://jswhisperer.uk/'>jswhisperer</a>
 	</div>
+	<ListCategories />
 
 	<div class='h-feed'>
 		<h2 class='text-lg font-medium tracking-wide text-end'>Latest Posts</h2>
