--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -9,7 +9,7 @@
 	font-weight: normal;
 	font-style: normal;
 }
-body {
+body p {
 	font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
 	font-size: 19px;
 	line-height: 31px;
