--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -95,3 +95,9 @@
 	text-shadow: none;
 }
 @import './prism.css';
+
+#body, html, body {
+    font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
+    font-size: 19px;
+    line-height: 31px;
+}
