--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -36,7 +36,7 @@ const structuredData = {
 		</head>
 	</Head>
 
-	<body class='bg-white text-stone-950 dark:bg-[#0a0910] dark:text-white mx-0'>
+	<body id='body'>
 		<Header />
 		<NewHeader />
 		<main
