--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -34,7 +34,7 @@ const siteURL = new URL(Astro.site)
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1' />
 
-<link href='https://jswhisperer.uk/styles/global.css' rel='stylesheet' />
+<link is:global href='https://jswhisperer.uk/styles/global.css' rel='stylesheet' />
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
