--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -38,7 +38,7 @@ import { Picture } from 'astro:assets'
 	</div>
 </BaseLayout>
 
-<style>
+<!-- <style>
 	/*! CSS Used from: https://gregbenner-classic-2009.netlify.app/stylesheets/mini.min.crush.css */
 	p {
 		margin: 0;
@@ -71,4 +71,4 @@ import { Picture } from 'astro:assets'
 			line-height: 23px;
 		}
 	}
-</style>
+</style> -->
