--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -52,5 +52,13 @@ const structuredData = {
 				margin-left: calc(100vw - 100%); /* prevent layout shift */
 			}
 		</style> -->
-	</body>
+	</body><style>
+		#body,
+		html,
+		body {
+			font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
+			font-size: 19px;
+			line-height: 31px;
+		}
+	</style>
 </html>
