--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,3 +8,32 @@ const today = new Date()
 	&copy; {today.getFullYear()}
 	{siteConfig.author}. All rights reserved.
 </footer>
+
+<footer id='footer' class='flex justify-center items-center w-full px-16 h-28 border-t-2'>
+	<span class='shadow-down'></span>
+	<div class='container'>
+		<div class='sixteen columns omega row'>
+			<p>
+				Written in HTML5
+				<span aria-hidden='true' class='icon-html5'></span> and CSS3
+				<span aria-hidden='true' class='icon-css3'></span><br />
+				tested on Windows,
+				<span aria-hidden='true' class='icon-windows'></span> and of course Mac. <span
+					aria-hidden='true'
+					class='icon-apple'></span>
+				<br />
+				Built by a Canadian;
+				<span aria-hidden='true' class='icon-maple-leaf'></span> for the world. <span
+					aria-hidden='true'
+					class='icon-globe'></span>
+				<br />
+				<a href=''><span aria-hidden='true' class='icon-address'></span>Sitemap</a>
+
+				<a href='/copyright'>
+					&copy; {today.getFullYear()} {siteConfig.author}. All rights reserved.</a
+				>
+				<br />
+			</p>
+		</div>
+	</div>
+</footer>
