--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -27,14 +27,11 @@ const username = 'jswhisperer'
 
 import { AstroFont } from 'astro-font'
 import { join } from 'path'
-const siteURL = new URL(Astro.site)
 ---
 
 <!-- Global Metadata -->
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width, initial-scale=1' />
-
-<link is:global href='https://jswhisperer.uk/styles/global.css' rel='stylesheet' />
 
 <link rel='icon' href='/favicon.ico' />
 <meta name='generator' content={Astro.generator} />
@@ -90,6 +87,10 @@ const siteURL = new URL(Astro.site)
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
 
+<style is:global>
+	@import url('/styles/global.css');
+</style>
+
 <AstroFont
 	config={[
 		{
@@ -111,26 +112,11 @@ const siteURL = new URL(Astro.site)
 			name: 'gregasaurus',
 			fallback: 'sans-serif',
 			src: [
-				//  {
-				//   weight: '400',
-				// 		style: 'normal',
-				// 		path: join(process.cwd(), 'public', 'fonts', 'gregasaurus.eot')
-				// },
 				{
 					weight: '400',
 					style: 'normal',
 					path: join(process.cwd(), 'public', 'fonts', 'gregasaurus.woff')
 				}
-				//  {
-				//   weight: '400',
-				// 		style: 'normal',
-				// 		path: join(process.cwd(), 'public', 'fonts', 'gregasaurus.svg')
-				// },
-				//  {
-				//   weight: '400',
-				// 		style: 'normal',
-				// 		path: join(process.cwd(), 'public', 'fonts', 'gregasaurus.ttf')
-				// }
 			]
 		},
 		{
