--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -105,3 +105,15 @@ html {
     font-size: 19px;
     line-height: 31px;
 }
+
+/*! CSS Used from: https://gregbenner-classic-2009.netlify.app/stylesheets/mini.min.crush.css */
+span,a{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline;text-shadow:1px 1px 5px #FFF;}
+a,a:visited{color:#444;text-decoration:none;outline:0;}
+a:hover,a:focus{color:#555;}
+[class^="icon-"]:before{font-family:'gregasaurus';font-style:normal;speak:none;}
+.icon-arrow-up:before{content:"\0043";}
+*{position:relative;}
+.tothetop{z-index:2;right:10px;top:5px;position:absolute;color:#847E70;opacity:.1;zoom:1;-ms-filter:"alpha(opacity=10)";*filter:alpha(opacity=10);}
+.tothetop:hover{color:#847E70;opacity:.9;zoom:1;-ms-filter:"alpha(opacity=90)";*filter:alpha(opacity=90);}
+/*! CSS Used fontfaces */
+@font-face{font-family:'gregasaurus';src:url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.eot');src:url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.eot#iefix') format('embedded-opentype'),url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.svg') format('svg'),url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.woff') format('woff'),url('https://gregbenner-classic-2009.netlify.app/fonts/gregasaurus.ttf') format('truetype');font-weight:normal;font-style:normal;}
