--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -16,6 +16,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 <BaseLayout title='Work'>
 	<a href='#top' class='tothetop'> <span aria-hidden='true' class='icon-arrow-up'></span></a>
 	<h2>Work <span aria-hidden='true' class='icon-cannon'></span></h2>
+	<h3>OLD WORK UNDER CONSTRUCTION</h3>
 	<ul class='tabs'>
 		<li>
 			<a href='#the-web-dev' class='active'
